# sloths-inventory

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc.cjs  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  compose.yml  env.docker  env.example  pyproject.toml  pytest.ini
.github/workflows/: auto-pr-description.yml  concurrency_postgres.yaml  create-tag.yaml  create_tag.yaml  docker-publish.yml  docker.yaml  lint_and_test.yaml  pr-tests.yml  push-create_tag.yaml  push-rebase.yaml  rebase.yaml  release.yaml  tag-release.yaml  tests.yaml  tests.yml  tests_postgres.yaml
docs/: inventory-list-query-profiling.md
sloths_inventory/: manage.py
sloths_inventory/myapp1/: views.py
sloths_inventory/sloths_inventory/: asgi.py  settings.py
sloths_inventory/templates/: index.htm
src/: conftest.py  manage.py
src/catalogs/: admin.py  apps.py  models.py  signals.py  tests.py  urls.py  views.py
src/catalogs/migrations/: 0001_initial.py  0002_alter_device_unique_together.py  0002_alter_location_created_at_alter_location_name_and_more.py  0002_alter_location_options_alter_status_options_and_more.py  0002_model.py  0003_alter_location_options_alter_responsible_options_and_more.py  0003_alter_responsible_middle_name.py  0003_device.py  0004_alter_location_options_alter_status_options.py  0004_delete_device.py  0005_location_responsible_and_more.py  0006_alter_location_name.py
src/catalogs/templates/catalogs/: location_confirm_delete.html  location_form.html  location_list.html
src/catalogs/tests/: __init__.py  conftest.py  factories.py  test_admin.py  test_apps.py  test_conftest.py  test_models.py  test_signals.py  test_views.py
src/common/: __init__.py  admin.py  application_groups.py  apps.py  catalog_correction_window.py  edit_window.py  email_backends.py  email_tokens.py  email_utils.py  forms.py  health.py  models.py  notifications.py  tests.py  timezone.py  urls.py  views.py
src/common/management/commands/: dev.py  gunicorn.py  start.py
src/common/static/common/: app.css  nav.js  searchable_select.js
src/common/templates/: base.html  home.html  login.html  password_change.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  profile.html
src/common/templates/common/: _search_form.html  base.html  login.html
src/common/templates/emails/: email_change_body.html  email_change_body.txt  email_change_subject.txt  email_changed_notification_body.html  email_changed_notification_body.txt  email_changed_notification_subject.txt  operation_assigned_body.html  operation_assigned_body.txt  operation_assigned_subject.txt  operation_unassigned_body.html  operation_unassigned_body.txt  operation_unassigned_subject.txt  operation_updated_body.html  operation_updated_body.txt  operation_updated_subject.txt  password_reset_body.html  password_reset_body.txt  password_reset_subject.txt  responsible_linked_body.html  responsible_linked_body.txt  responsible_linked_subject.txt  responsible_unlinked_body.html  responsible_unlinked_body.txt  responsible_unlinked_subject.txt  responsible_updated_body.html  responsible_updated_body.txt  responsible_updated_subject.txt  transfer_accepted_body.html  transfer_accepted_body.txt  transfer_accepted_subject.txt  transfer_cancelled_body.html  transfer_cancelled_body.txt  transfer_cancelled_subject.txt  transfer_created_body.html  transfer_created_body.txt  (+1 more)
src/common/templatetags/: responsible_tags.py
src/common/tests/: __init__.py  conftest.py  test_admin.py  test_application_groups.py  test_application_groups_signals.py  test_apps.py  test_auth.py  test_catalog_correction_window.py  test_edit_window.py  test_email_backends.py  test_email_utils.py  test_forms.py  test_health.py  test_models.py  test_password_change.py  test_po_integrity.py  test_profile.py  test_timezone.py
src/devices/: admin.py  apps.py  attributes.py  models.py  tests.py  urls.py  views.py
src/devices/migrations/: 0001_initial.py  0002_alter_category_created_at_alter_category_name_and_more.py  0002_alter_category_options_alter_manufacturer_options_and_more.py  0003_alter_category_options_alter_device_options_and_more.py  0003_device.py  0004_alter_device_unique_together_and_more.py
src/devices/templates/: base.html  confirm_delete.html  device_confirm_delete.html  device_form.html  device_list.html  form.html  list.html
src/devices/tests/: __init__.py  conftest.py  factories.py  test_admin.py  test_apps.py  test_models.py  test_views.py
src/health/: apps.py  health.py  urls.py
src/health/tests/: test_health.py
src/inventory/: admin.py  apps.py  list_query_helpers.py  models.py  presentation.py  signals.py  tests.py  urls.py  views.py
src/inventory/admin/: __init__.py
src/inventory/management/: __init__.py
src/inventory/migrations/: 0001_initial.py  0002_alter_item_created_at_alter_item_notes_and_more.py  0002_alter_item_device.py  0003_alter_item_options_alter_operation_options_and_more.py  0004_alter_operation_options_and_more.py  0005_pendingtransfer.py  0006_operation_inventory_op_resp_item_idx.py  0007_alter_operation_item_and_more.py  0008_alter_pendingtransfer_item.py
src/inventory/models/: __init__.py  item.py  operation.py  pages.py  pending_transfer.py
src/inventory/tests/: __init__.py  conftest.py  factories.py  test_admin.py  test_application_groups.py  test_apps.py  test_concurrency.py  test_models.py  test_postgres_contracts.py  test_resolve_item_history_context.py  test_signals.py  test_views.py
src/inventory/views/: __init__.py  http_helpers.py  item_views.py  list_views.py  transfer_views.py
src/myapp1/: admin.py  models.py
src/myapp1/migrations/: 0001_initial.py  0002_department_worker_department.py
src/sloths_inventory/: asgi.py  settings.py  settings_pytest.py  urls.py  wsgi.py
src/sloths_inventory/tests/: __init__.py  conftest.py  runner.py  test_manage.py  test_runner.py  test_settings.py  test_smoke.py  test_urls.py
src/static/css/: custom.css
src/templates/admin/: base_site.html
tests/: conftest.py  test_smoke.py
(+24 files in other folders)
