[project]
name = "sloths-inventory"
version = "0.11.0"
description = "Django-based inventory application."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "django>=5.2,<6.0",
  "django-environ>=0.12.0",
  "psycopg2-binary>=2.9.12"
]

[dependency-groups]
dev = [
  "black>=23.0.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
  "flake8-pyproject>=1.2.3",
  "pytest>=8.0.0",
  "pytest-django>=4.8.0",
  "pytest-cov>=4.1.0",
  "mypy>=1.19,<1.20",
  "django-stubs>=5.2,<5.3",
  "django-stubs-ext>=5.2,<5.3",
  "bandit>=1.7.5",
  "pre-commit>=4.6.0",
  "vulture>=2.16"
]

[tool.black]
line-length = 88
include = "\\.pyi?$"
extend-exclude = """
/(
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
"""

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.flake8]
max-line-length = 88
extend-ignore = [ "E203", "W503" ]
exclude = [ ".venv", "__pycache__", ".git", "htmlcov" ]

[tool.mypy]
exclude = "(^tests/|.*/tests/|.*/migrations/)"
mypy_path = "stubs"
plugins = [ "mypy_django_plugin.main" ]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

  [[tool.mypy.overrides]]
  module = [ "environ" ]
  ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "sloths_inventory.settings"

[tool.bandit]
exclude_dirs = [ ".venv", "__pycache__", ".git", "htmlcov", "tests" ]

[tool.coverage.run]
source = [ "." ]
omit = [ "tests/*", "src/*/tests/*" ]
branch = true

[tool.coverage.report]
exclude_lines = [
  "def __repr__",
  "if self\\.debug",
  "raise AssertionError",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if 0:",
  "if __name__ == .__main__.:",
  "@(abc\\.)?abstractmethod",
  "@overload",
  "\\.\\.\\.$",
  "pragma: no cover"
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.vulture]
min_confidence = 80
exclude = [ ".venv", "__pycache__" ]
ignore_names = [ "cls", "owner" ]
paths = [ "." ]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sloths_inventory.settings_pytest"
python_files = [ "test_*.py" ]
python_classes = [ "Test*" ]
python_functions = [ "test_*" ]
addopts = "--strict-markers"
markers = [
  "django_db: mark test to use django database",
  "slow: mark test as slow running",
  "integration: mark test as integration test",
  "unit: mark test as unit test"
]
testpaths = [ "src" ]
filterwarnings = [ "ignore::DeprecationWarning" ]
