[project]
name = "sloths-inventory"
version = "3.3.2"
description = "Django-based inventory application."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "django>=6.0.7,<7.0",
  "django-autocomplete-light>=5.0.0,<6.0.0",
  "django-environ>=0.14.0,<1.0.0",
  "django-q2>=1.0.0,<2.0.0",
  "gunicorn>=26.0.0,<27.0.0",
  "psycopg2-binary>=2.9.12,<3.0.0",
  "whitenoise>=6.9.0,<7.0.0"
]

[dependency-groups]
dev = [
  "black>=26.5.1",
  "isort>=5.12.0",
  "flake8>=6.0.0",
  "flake8-pyproject>=1.2.3",
  "pytest>=9.1.1",
  "pytest-django>=4.8.0",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.6.0",
  "mypy",
  "django-stubs[compatible-mypy]>=5.2,<5.3",
  "django-stubs-ext>=6.0.6,<6.1",
  "bandit>=1.7.5",
  "pre-commit>=4.6.0",
  "vulture>=2.16",
  "pip-audit>=2.10.1",
  "pip>=26.1.2"
]

[tool.black]
line-length = 88
include = "\\.pyi?$"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = [ "E203", "W503" ]
exclude = [ ".venv", "htmlcov" ]

[tool.mypy]
exclude = "(^tests/|.*/tests/|.*/migrations/)"
mypy_path = "stubs"
plugins = [ "mypy_django_plugin.main" ]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

  [[tool.mypy.overrides]]
  module = [ "environ" ]
  ignore_missing_imports = true

  [[tool.mypy.overrides]]
  module = [ "dal", "dal_select2", "dal_select2.widgets" ]
  ignore_missing_imports = true

  [[tool.mypy.overrides]]
  module = [ "django_q", "django_q.*" ]
  ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "sloths_inventory.settings"

[tool.bandit]
exclude_dirs = [ ".venv", "htmlcov", "tests" ]

[tool.coverage.run]
source = [ "." ]
omit = [
  "tests/*",
  "src/*/tests/*",
  "src/conftest.py",
  "src/sloths_inventory/settings_pytest.py",
  "src/manage.py",
  "src/sloths_inventory/asgi.py",
  "src/sloths_inventory/wsgi.py",
  "src/common/management/commands/dev.py",
  "src/*/management/commands/profile_*.py"
]
branch = true
parallel = true

[tool.coverage.report]
fail_under = 100
exclude_lines = [
  "raise AssertionError",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "@(abc\\.)?abstractmethod",
  "@overload",
  "\\.\\.\\.$",
  "pragma: no cover"
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.vulture]
min_confidence = 80
paths = [ "src" ]
exclude = [ "*/tests/*", "src/conftest.py" ]
ignore_names = [ "cls", "owner", "UserType", "db", "obj", "args", "kwargs" ]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sloths_inventory.settings_pytest"
python_files = [ "test_*.py" ]
addopts = "--strict-markers --cov=src --cov-report=term-missing -n auto"
markers = [
  "django_db: mark test to use django database",
  "postgres: mark test that requires PostgreSQL",
  "slow: mark test as slow running",
  "integration: mark test as integration test",
  "unit: mark test as unit test"
]
testpaths = [ "src" ]
filterwarnings = [ "ignore::DeprecationWarning" ]
